apps/99-indefinite/monitoring-workaround/base/api-server-networkpolicy.yaml
# https://access.redhat.com/solutions/7145130
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-check-endpoints-monitoring
  namespace: openshift-apiserver
spec:
  podSelector:
    matchLabels:
      apiserver: "true"
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
    ports:
    - port: 17698
      protocol: TCP
  policyTypes:
  - Ingress
